# transport/http/routes.go
@@ -31,11 +31,8 @@ func (t *Transport) routes() http.Handler {
 	mux.HandleFunc("OPTIONS /", corsHandler)
 
 	mux.HandleFunc("POST /v1/auth/sign-up", defaultMiddlewareGroup.Apply(t.handlerSignUp))
-	mux.HandleFunc("POST /v1/auth/verification", defaultMiddlewareGroup.Apply(t.handlerActivateAccount))
 	mux.HandleFunc("POST /v1/auth/sign-in", defaultMiddlewareGroup.Apply(t.handlerSignIn))
 	mux.HandleFunc("POST /v1/auth/sign-in/2fa", signIn2FaMiddlewareGroup.Apply(t.handlerSignIn2FA))
-	mux.HandleFunc("POST /v1/auth/recovery", defaultMiddlewareGroup.Apply(t.handlerRecovery))
-	mux.HandleFunc("POST /v1/auth/recovery/{code}", defaultMiddlewareGroup.Apply(t.handlerRecoveryCode))
 	mux.HandleFunc("POST /v1/auth/refresh", defaultMiddlewareGroup.Apply(t.handlerRefresh))
 
 	mux.HandleFunc("POST /v1/telegram", userMiddlewareGroup.Apply(t.handlerTelegramBind))
